# examsim

./: Cargo.toml  README.md
.github/workflows/: build.yml
exams/: operating_systems.txt
src/: cli.yml  exam.rs  main.rs  parser.rs  system.rs
src/system/: exam.rs  interface.rs  mod.rs
src/system/interface/: console.rs  mod.rs
